# perpetuals

./: .gitignore  Cargo.toml  LICENSE  README.md  comments.patch  package.json  tsconfig.json
.github/workflows/: coverage.yml
contracts/margined_engine/: Cargo.toml  README.md
contracts/margined_engine/src/: contract.rs  error.rs  handle.rs  lib.rs  messages.rs  querier.rs  query.rs  reply.rs  state.rs  tick.rs  utils.rs
contracts/margined_engine/src/testing/: add_remove_margin_tests.rs  bad_debt_tests.rs  cw_token_add_remove_margin_tests.rs  cw_token_liquidation_frontrun_hack_tests.rs  cw_token_liquidation_tests.rs  cw_token_pay_funding_tests.rs  cw_token_position_fee_tests.rs  fee_calculation_tests.rs  fluctuation_tests.rs  gas_integration_tests.rs  integration_tests.rs  liquidation_frontrun_hack_tests.rs  liquidation_tests.rs  margin_engine_tests.rs  margin_ratio_tests.rs  mod.rs  native_token_add_remove_margin_tests.rs  native_token_liquidation_frontrun_hack_tests.rs  native_token_liquidation_tests.rs  native_token_pay_funding_tests.rs  native_token_position_fee_tests.rs  native_token_tests.rs  open_interest_notional_tests.rs  open_notional_tests.rs  pausable_tests.rs  pay_funding_tests.rs  personal_position_tests.rs  position_fee_tests.rs  position_liquidation_tests.rs  position_tests.rs  position_upper_bound_tests.rs  setup.rs  tests.rs  tp_sl_test.rs  vamm_leverage_test.rs  whitelist_tests.rs
contracts/margined_fee_pool/: Cargo.toml  README.md
contracts/margined_fee_pool/src/: contract.rs  handle.rs  lib.rs  messages.rs  query.rs  state.rs
contracts/margined_fee_pool/src/testing/: mod.rs  tests.rs
contracts/margined_insurance_fund/: Cargo.toml  README.md
contracts/margined_pricefeed/: Cargo.toml  README.md
contracts/margined_vamm/: Cargo.toml  README.md
contracts/margined_vamm/src/: contract.rs  decimals.rs  handle.rs  lib.rs  querier.rs  query.rs  state.rs  utils.rs
contracts/margined_vamm/src/testing/: change_reserve_test.rs  fee_tests.rs  fluctuation_tests.rs  funding_tests.rs  get_price_tests.rs  integration_tests.rs  mod.rs  reserve_snapshot_tests.rs  set_open_tests.rs  setup.rs  spread_limit_tests.rs  swap_input_output_tests.rs  swap_tests.rs  tests.rs  twap_tests.rs
contracts/mock_pricefeed/: Cargo.toml
contracts/mocks/mock_pricefeed/: Cargo.toml  README.md
contracts/mocks/mock_pricefeed/src/: contract.rs
doc/: v1-design.md
doc/diagrams/: add-margin.puml  close-pos-partial.puml  close-pos-whole.puml  component-diagram.puml  liq-pos-partial.puml  liq-pos-whole.puml  open-pos-increase.puml  pay-funding.puml  remove-margin.puml
docs/: README.md  index.html  overview.md
docs/assets/: highlight.css  search.js
docs/classes/: MarginedEngine_client.MarginedEngineClient.html  MarginedEngine_client.MarginedEngineQueryClient.html  MarginedFeePool_client.MarginedFeePoolClient.html  MarginedFeePool_client.MarginedFeePoolQueryClient.html  MarginedInsuranceFund_client.MarginedInsuranceFundClient.html  MarginedInsuranceFund_client.MarginedInsuranceFundQueryClient.html  MarginedPricefeed_client.MarginedPricefeedClient.html  MarginedPricefeed_client.MarginedPricefeedQueryClient.html  MarginedVamm_client.MarginedVammClient.html  MarginedVamm_client.MarginedVammQueryClient.html  Multicall_client.MulticallQueryClient.html  OraiswapLimitOrder_client.OraiswapLimitOrderClient.html  OraiswapLimitOrder_client.OraiswapLimitOrderQueryClient.html  OraiswapToken_client.OraiswapTokenClient.html  OraiswapToken_client.OraiswapTokenQueryClient.html
docs/diagrams/: open-pos-decrease.puml  open-pos-reverse.puml
docs/interfaces/: MarginedEngine_client.MarginedEngineInterface.html  MarginedEngine_client.MarginedEngineReadOnlyInterface.html  MarginedEngine_types.ConfigResponse.html  MarginedEngine_types.HooksResponse.html  MarginedEngine_types.InstantiateMsg.html  MarginedEngine_types.MigrateMsg.html  MarginedEngine_types.PauserResponse.html  MarginedEngine_types.PositionUnrealizedPnlResponse.html  MarginedEngine_types.StateResponse.html  MarginedFeePool_client.MarginedFeePoolInterface.html  MarginedFeePool_client.MarginedFeePoolReadOnlyInterface.html  MarginedFeePool_types.AllTokenResponse.html  MarginedFeePool_types.ConfigResponse.html  MarginedFeePool_types.InstantiateMsg.html  MarginedFeePool_types.MigrateMsg.html  MarginedFeePool_types.OwnerResponse.html  MarginedFeePool_types.TokenLengthResponse.html  MarginedFeePool_types.TokenResponse.html  MarginedInsuranceFund_client.MarginedInsuranceFundInterface.html  MarginedInsuranceFund_client.MarginedInsuranceFundReadOnlyInterface.html  MarginedInsuranceFund_types.AllVammResponse.html  MarginedInsuranceFund_types.AllVammStatusResponse.html  MarginedInsuranceFund_types.ConfigResponse.html  MarginedInsuranceFund_types.InstantiateMsg.html  MarginedInsuranceFund_types.MigrateMsg.html  MarginedInsuranceFund_types.OwnerResponse.html  MarginedInsuranceFund_types.VammResponse.html  MarginedInsuranceFund_types.VammStatusResponse.html  MarginedPricefeed_client.MarginedPricefeedInterface.html  MarginedPricefeed_client.MarginedPricefeedReadOnlyInterface.html  MarginedPricefeed_types.ConfigResponse.html  MarginedPricefeed_types.InstantiateMsg.html  MarginedPricefeed_types.MigrateMsg.html  MarginedPricefeed_types.OwnerResponse.html  MarginedVamm_client.MarginedVammInterface.html  MarginedVamm_client.MarginedVammReadOnlyInterface.html  MarginedVamm_types.CalcFeeResponse.html  MarginedVamm_types.ConfigResponse.html  MarginedVamm_types.InstantiateMsg.html  MarginedVamm_types.MigrateMsg.html  (+44 more)
docs/modules/: MarginedEngine_client.html  MarginedEngine_types.html  MarginedFeePool_client.html  MarginedFeePool_types.html  MarginedInsuranceFund_client.html  MarginedInsuranceFund_types.html  (+13 more)
scripts/: .gitignore  README.md  build_artifacts.sh  deploy.ts  deploy_configs.ts  helpers.ts  package.json  run_tests.sh  test.ts  tsconfig.json  types.d.ts
temp/: cw20_base.wasm  cw20_base.wasm:Zone.Identifier
wasm_file/: margined_engine.wasm  margined_fee_pool.wasm  margined_insurance_fund.wasm  margined_pricefeed.wasm  margined_vamm.wasm
(+103 files in other folders)
