[workspace]
resolver = '2'

members = [
    "packages/*",
    "contracts/margined_engine",
    "contracts/margined_fee_pool",
    "contracts/margined_insurance_fund",
    "contracts/margined_pricefeed",
    "contracts/margined_vamm",
    "contracts/mocks/*",
]


[workspace.dependencies]
cosmwasm-schema = { version = "1.1.9" }
cosmwasm-std = { version = "1.1.9" }
cosmwasm-storage = { version = "1.1.9" }
thiserror = "1.0.26"

# # override cosmwasm-std for all other packages
# [patch.crates-io]
# cosmwasm-std = { git = "https://github.com/oraichain/cosmwasm.git" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
