[package]
name = "margined_engine"
version = "0.1.0"
authors = ["Margined Protocol"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.4
"""

[dependencies]
cw20 = { version = "0.9.1" } 
cosmwasm-std = { version = "0.16.3" }
cosmwasm-storage = { version = "0.16.3" }
cosmwasm-bignumber = "2.2.0"
cw-storage-plus = "0.8.0"
margined-perp = { version = "0.1.0", path = "../../packages/margined_perp" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
sha3 = "0.10.0"

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
cw20-base = { version = "0.9.1", features = ["library"] }
cw-multi-test = "0.9.1"

