[package]
name = "margined_engine"
version = "0.1.0"
authors = ["Margined Protocol"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]



[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cw20 = { version = "1.0.1" }
cw-controllers = "1.0.1"
cw2 = "1.0.1"
cosmwasm-std = { version = "1.1.9" }
cosmwasm-storage = { version = "1.1.9" }
cw-storage-plus = "1.0.1"
margined_perp = { version = "0.1.0", path = "../../packages/margined_perp" }
margined_common = { version = "0.1.0", path = "../../packages/margined_common" }
thiserror = { version = "1.0.23" }
cosmwasm-schema = { version = "1.1.9" }
sha3 = "0.10.0"

[dev-dependencies]
cw20-base = { version = "1.0.1", features = ["library"] }
margined_utils = { version = "0.1.0", path = "../../packages/margined_utils" }
margined_vamm = { version = "0.1.0", path = "../../contracts/margined_vamm" }
cw-multi-test = "0.16.2"
