[package]
name = "margined_vamm"
version = "0.1.0"
authors = ["Margined Protocol"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]



[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-storage = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }

cw20 = { version = "1.0.1" }
cw2 = "1.0.1"
cw-controllers = "1.0.1"

margined_perp = { path = "../../packages/margined_perp" }
margined_common = { path = "../../packages/margined_common" }
margined_utils = { path = "../../packages/margined_utils" }

[dev-dependencies]
cw20-base = { version = "1.0.1", features = ["library"] }
margined_fee_pool = { version = "0.1.0", path = "../margined_fee_pool" }
margined_engine = { version = "0.1.0", path = "../margined_engine" }
margined_insurance_fund = { version = "0.1.0", path = "../margined_insurance_fund" }
mock_pricefeed = { version = "0.1.0", path = "../mocks/mock_pricefeed" }