[package]
name = "margined_vamm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
exclude = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []


[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }

cw20 = { workspace = true }
cw2 = { workspace = true }
cw-controllers = { workspace = true }

margined_perp = { workspace = true }
margined_common = { workspace = true }
margined_utils = { workspace = true }

[dev-dependencies]
cw20-base = { workspace = true, features = ["library"] }
margined_fee_pool = { workspace = true }
margined_engine = { workspace = true }
margined_insurance_fund = { workspace = true }
mock_pricefeed = { workspace = true }